--- a/style.css
+++ b/style.css
@@ -404,7 +404,7 @@ header .navbar ul li a:hover{
 }
 
 .contact .row .content .title{
-    text-transform: uppercase;
+    text-transform: lowercase;
     color:#fff;
     font-size: 3rem;
     padding-bottom: 2rem;
